first round of scanning

--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -12,14 +13,15 @@
 <body>
 <div class="container">
     <table id="books" class="table table-striped table-hover">
-        <thead><tr><th>ISBN</th><th>Title</th><th>Author</th><th>Year</th><th style="width: 10%;">Cover</th></tr></thead>
+        <thead><tr><th>ISBN</th><th>Title</th><th>Author</th><th>Year</th><th>Read</th><th style="width: 10%;">Cover</th></tr></thead>
         <tbody>
             {{range .}}
                 <tr id="{{.ID}}" data-search="{{.ID}} {{.ISBN13}} {{.Title}} {{.Author}}" class="{{if .Complete}}ok{{else}}danger{{end}}">
                     <td>{{if .Complete}}{{.ISBN13}}{{else}}{{.ISBN}}{{end}}</td>
-                    <td><a href="{{.Link}}" target="_blank">{{if .Complete}}{{.Title}}{{else}}{{.Link}}</a>{{end}}</td>
+                    <td><a href="{{.Link}}" target="_blank">{{if .Title}}{{.Title}}{{else}}{{.Link}}</a>{{end}}</td>
                     <td>{{.Author}}</td>
                     <td>{{.Year}}</td>
+                    <td>{{if .Read}}Yes{{else}}No{{end}}</td>
                     <td><img src="{{.Image}}" class="img-thumbnail img-responsive"/></td>
                 </tr>
             {{end}}
@@ -35,7 +37,10 @@
 <script>
 
     $(document).ready(function() {
-        $('#books').DataTable();
+        $('#books').DataTable({
+            //"paging":   false,
+            "lengthMenu": [[500, -1], [500, "All"]]
+        });
     } );
 
 </script>
